force-app/main/default/objects/Account/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Água</fullName>
            </value>
            <value>
                <fullName>Alimentação</fullName>
            </value>
            <value>
                <fullName>Coleta de Lixo</fullName>
            </value>
            <value>
                <fullName>Comércio e Varejo</fullName>
            </value>
            <value>
                <fullName>Energia</fullName>
            </value>
            <value>
                <fullName>Funerário</fullName>
            </value>
            <value>
                <fullName>Imprensa</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Produção</fullName>
            </value>
            <value>
                <fullName>Saúde</fullName>
            </value>
            <value>
                <fullName>Segurança</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Telecomunicação</fullName>
            </value>
            <value>
                <fullName>ADMINISTRAÇÃO PÚBLICA, DEFESA E SEGURIDADE SOCIAL</fullName>
                <isActive>false</isActive>
                <label>ADMINISTRAÇÃO PÚBLICA, DEFESA E SEGURIDADE SOCIAL</label>
            </value>
            <value>
                <fullName>AGRICULTURA, PECUÁRIA, PRODUÇÃO FLORESTAL, PESCA E AQÜICULTURA</fullName>
                <isActive>false</isActive>
                <label>AGRICULTURA, PECUÁRIA, PRODUÇÃO FLORESTAL, PESCA E AQÜICULTURA</label>
            </value>
            <value>
                <fullName>ALOJAMENTO E ALIMENTAÇÃO</fullName>
                <isActive>false</isActive>
                <label>ALOJAMENTO E ALIMENTAÇÃO</label>
            </value>
            <value>
                <fullName>ARTES, CULTURA, ESPORTE E RECREAÇÃO</fullName>
                <isActive>false</isActive>
                <label>ARTES, CULTURA, ESPORTE E RECREAÇÃO</label>
            </value>
            <value>
                <fullName>ATIVIDADES ADMINISTRATIVAS E SERVIÇOS COMPLEMENTARES</fullName>
                <isActive>false</isActive>
                <label>ATIVIDADES ADMINISTRATIVAS E SERVIÇOS COMPLEMENTARES</label>
            </value>
            <value>
                <fullName>ATIVIDADES FINANCEIRAS, DE SEGUROS E SERVIÇOS RELACIONADOS</fullName>
                <isActive>false</isActive>
                <label>ATIVIDADES FINANCEIRAS, DE SEGUROS E SERVIÇOS RELACIONADOS</label>
            </value>
            <value>
                <fullName>ATIVIDADES IMOBILIÁRIAS</fullName>
                <isActive>false</isActive>
                <label>ATIVIDADES IMOBILIÁRIAS</label>
            </value>
            <value>
                <fullName>ATIVIDADES PROFISSIONAIS, CIENTÍFICAS E TÉCNICAS</fullName>
                <isActive>false</isActive>
                <label>ATIVIDADES PROFISSIONAIS, CIENTÍFICAS E TÉCNICAS</label>
            </value>
            <value>
                <fullName>COMÉRCIO; REPARAÇÃO DE VEÍCULOS AUTOMOTORES E MOTOCICLETAS</fullName>
                <isActive>false</isActive>
                <label>COMÉRCIO; REPARAÇÃO DE VEÍCULOS AUTOMOTORES E MOTOCICLETAS</label>
            </value>
            <value>
                <fullName>CONSTRUÇÃO</fullName>
                <isActive>false</isActive>
                <label>CONSTRUÇÃO</label>
            </value>
            <value>
                <fullName>EDUCAÇÃO</fullName>
                <isActive>false</isActive>
                <label>EDUCAÇÃO</label>
            </value>
            <value>
                <fullName>ELETRICIDADE E GÁS</fullName>
                <isActive>false</isActive>
                <label>ELETRICIDADE E GÁS</label>
            </value>
            <value>
                <fullName>INDÚSTRIAS DE TRANSFORMAÇÃO</fullName>
                <isActive>false</isActive>
                <label>INDÚSTRIAS DE TRANSFORMAÇÃO</label>
            </value>
            <value>
                <fullName>INDÚSTRIAS EXTRATIVAS</fullName>
                <isActive>false</isActive>
                <label>INDÚSTRIAS EXTRATIVAS</label>
            </value>
            <value>
                <fullName>INFORMAÇÃO E COMUNICAÇÃO</fullName>
                <isActive>false</isActive>
                <label>INFORMAÇÃO E COMUNICAÇÃO</label>
            </value>
            <value>
                <fullName>ORGANISMOS INTERNACIONAIS E OUTRAS INSTITUIÇÕES EXTRATERRITORIAIS</fullName>
                <isActive>false</isActive>
                <label>ORGANISMOS INTERNACIONAIS E OUTRAS INSTITUIÇÕES EXTRATERRITORIAIS</label>
            </value>
            <value>
                <fullName>OUTRAS ATIVIDADES DE SERVIÇOS</fullName>
                <isActive>false</isActive>
                <label>OUTRAS ATIVIDADES DE SERVIÇOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>