force-app/main/default/objects/Account/fields/Retorno_da_Tratativa_Sazo__c.field-meta.xml
<CustomField>
    <fullName>Retorno_da_Tratativa_Sazo__c</fullName>
    <inlineHelpText>Selecionar a opção pertinente referente à tratativa da sazonalidade.</inlineHelpText>
    <label>Retorno da Tratativa Sazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACEITE</fullName>
            </value>
            <value>
                <fullName>CONTATO AGENDADO</fullName>
            </value>
            <value>
                <fullName>EM NEGOCIAÇÃO</fullName>
            </value>
            <value>
                <fullName>NEGADO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO TRATATIVA</fullName>
                <isActive>false</isActive>
                <label>AGUARDANDO TRATATIVA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>