force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(VencimentoDoProximoContrato__c &gt; ADDMONTHS(TODAY(),1) ,&apos;Ativa&apos; , &apos;Inativa&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>