force-app/main/default/objects/Account/fields/Tipo_da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Empresa__c</fullName>
    <label>Tipo da Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_das_Empresas</valueSetName>
    </valueSet>
</CustomField>