force-app/main/default/objects/Account/fields/tipoDeConvenio__c.field-meta.xml
<CustomField>
    <fullName>tipoDeConvenio__c</fullName>
    <label>Tipo de Convênio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>