force-app/main/default/objects/Account/fields/Total_de_Jovens_Ativos__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Jovens_Ativos__c</fullName>
    <label>Total de Jovens Ativos</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>