force-app/main/default/objects/Account/fields/TrabalhaComConcorrente__c.field-meta.xml
<CustomField>
    <fullName>TrabalhaComConcorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trabalha com o concorrente?</label>
    <type>Checkbox</type>
</CustomField>