force-app/main/default/objects/Account/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <label>UF</label>
    <length>2</length>
    <type>Text</type>
</CustomField>