force-app/main/default/objects/Account/fields/Unidad_filial__c.field-meta.xml
<CustomField>
    <fullName>Unidad_filial__c</fullName>
    <label>Unid_filial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>