force-app/main/default/objects/Account/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <label>Unidade de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gerencia_Regional__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Unidades_de_Atendimento</valueSetName>
    </valueSet>
</CustomField>