force-app/main/default/objects/Account/fields/unidadeAdminstrativa__c.field-meta.xml
<CustomField>
    <fullName>unidadeAdminstrativa__c</fullName>
    <label>Unidade Adminstrativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>