force-app/main/default/objects/Account/fields/unidadeFilial__c.field-meta.xml
<CustomField>
    <fullName>unidadeFilial__c</fullName>
    <label>Unidade Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>