force-app/main/default/objects/Account/fields/Validade_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Validade_do_Contrato__c</fullName>
    <label>Validade do Contrato</label>
    <type>Date</type>
</CustomField>