force-app/main/default/objects/Account/recordTypes/Kairos.recordType-meta.xml
<RecordType>
    <fullName>Kairos</fullName>
    <active>true</active>
    <description>Contas Kairós</description>
    <label>Kairos</label>
</RecordType>