force-app/main/default/objects/Account/validationRules/Bloqueia_Proprietario_da_Conta.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_Proprietario_da_Conta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(($Permission.Bypass_Permission = False),
AND( 
			NOT ($Profile.Name = &quot;Administrador do sistema&quot;),
   NOT ($Profile.Name = &quot;System Administrator&quot;), 
				OR( 
								ISCHANGED(OwnerId)
				)))</errorConditionFormula>
    <errorMessage>Não é possivel alterar o proprietárioda Conta.</errorMessage>
</ValidationRule>