force-app/main/default/objects/Account/validationRules/Telefone_ou_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Telefone_ou_Email</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK(Phone),ISBLANK(Email__c))</errorConditionFormula>
    <errorMessage>Preenchimento obrigatório de Telefone ou Email.</errorMessage>
</ValidationRule>