force-app/main/default/objects/Account/validationRules/Valida_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_CNPJ</fullName>
    <active>true</active>
    <errorConditionFormula>IF(LEN(CNPJFormatado__c)=14,OR(AND(MOD((
(VALUE(MID(CNPJFormatado__c,1,1))*6)+
(VALUE(MID(CNPJFormatado__c,2,1))*5)+
(VALUE(MID(CNPJFormatado__c,3,1))*4)+
(VALUE(MID(CNPJFormatado__c,4,1))*3)+
(VALUE(MID(CNPJFormatado__c,5,1))*2)+
(VALUE(MID(CNPJFormatado__c,6,1))*9)+
(VALUE(MID(CNPJFormatado__c,7,1))*8)+
(VALUE(MID(CNPJFormatado__c,8,1))*7)+
(VALUE(MID(CNPJFormatado__c,9,1))*6)+
(VALUE(MID(CNPJFormatado__c,10,1))*5)+
(VALUE(MID(CNPJFormatado__c,11,1))*4)+
(VALUE(MID(CNPJFormatado__c,12,1))*3)+
(VALUE(MID(CNPJFormatado__c,13,1))*2))
,11)&lt;=1
,VALUE(MID(CNPJFormatado__c,14,1))!=0)
,AND(MOD((
(VALUE(MID(CNPJFormatado__c,1,1))*6)+
(VALUE(MID(CNPJFormatado__c,2,1))*5)+
(VALUE(MID(CNPJFormatado__c,3,1))*4)+
(VALUE(MID(CNPJFormatado__c,4,1))*3)+
(VALUE(MID(CNPJFormatado__c,5,1))*2)+
(VALUE(MID(CNPJFormatado__c,6,1))*9)+
(VALUE(MID(CNPJFormatado__c,7,1))*8)+
(VALUE(MID(CNPJFormatado__c,8,1))*7)+
(VALUE(MID(CNPJFormatado__c,9,1))*6)+
(VALUE(MID(CNPJFormatado__c,10,1))*5)+
(VALUE(MID(CNPJFormatado__c,11,1))*4)+
(VALUE(MID(CNPJFormatado__c,12,1))*3)+
(VALUE(MID(CNPJFormatado__c,13,1))*2))
,11)&gt;1
,(11-MOD((
(VALUE(MID(CNPJFormatado__c,1,1))*6)+
(VALUE(MID(CNPJFormatado__c,2,1))*5)+
(VALUE(MID(CNPJFormatado__c,3,1))*4)+
(VALUE(MID(CNPJFormatado__c,4,1))*3)+
(VALUE(MID(CNPJFormatado__c,5,1))*2)+
(VALUE(MID(CNPJFormatado__c,6,1))*9)+
(VALUE(MID(CNPJFormatado__c,7,1))*8)+
(VALUE(MID(CNPJFormatado__c,8,1))*7)+
(VALUE(MID(CNPJFormatado__c,9,1))*6)+
(VALUE(MID(CNPJFormatado__c,10,1))*5)+
(VALUE(MID(CNPJFormatado__c,11,1))*4)+
(VALUE(MID(CNPJFormatado__c,12,1))*3)+
(VALUE(MID(CNPJFormatado__c,13,1))*2)
),11
))!=VALUE(MID(CNPJFormatado__c,14,1)))),NOT(
OR(
LEN(CNPJFormatado__c)=0,AND(MOD(MOD(11-MOD(
VALUE(MID(CNPJFormatado__c,1,1))*10+
VALUE(MID(CNPJFormatado__c,2,1))*9+
VALUE(MID(CNPJFormatado__c,3,1))*8+
VALUE(MID(CNPJFormatado__c,5,1))*7+
VALUE(MID(CNPJFormatado__c,6,1))*6+
VALUE(MID(CNPJFormatado__c,7,1))*5+
VALUE(MID(CNPJFormatado__c,9,1))*4+
VALUE(MID(CNPJFormatado__c,10,1))*3+
VALUE(MID(CNPJFormatado__c,11,1))*2,11),11),10)=
VALUE(MID(CNPJFormatado__c,13,1)),MOD(MOD(11-MOD(
VALUE(MID(CNPJFormatado__c,1,1))*11+
VALUE(MID(CNPJFormatado__c,2,1))*10+
VALUE(MID(CNPJFormatado__c,3,1))*9+
VALUE(MID(CNPJFormatado__c,5,1))*8+
VALUE(MID(CNPJFormatado__c,6,1))*7+
VALUE(MID(CNPJFormatado__c,7,1))*6+
VALUE(MID(CNPJFormatado__c,9,1))*5+
VALUE(MID(CNPJFormatado__c,10,1))*4+
VALUE(MID(CNPJFormatado__c,11,1))*3+
VALUE(MID(CNPJFormatado__c,13,1))*2,11),11),10)=
VALUE(MID(CNPJFormatado__c,14,1))))) &amp;&amp; NOT(OR(LEN(CNPJFormatado__c)=0,AND(MOD(MOD(11-MOD(
VALUE(MID(CNPJFormatado__c,1,1))*10+
VALUE(MID(CNPJFormatado__c,2,1))*9+
VALUE(MID(CNPJFormatado__c,3,1))*8+
VALUE(MID(CNPJFormatado__c,4,1))*7+
VALUE(MID(CNPJFormatado__c,5,1))*6+
VALUE(MID(CNPJFormatado__c,6,1))*5+
VALUE(MID(CNPJFormatado__c,7,1))*4+
VALUE(MID(CNPJFormatado__c,8,1))*3+
VALUE(MID(CNPJFormatado__c,9,1))*2,11),11),10)=
VALUE(MID(CNPJFormatado__c,10,1)),MOD(MOD(11-MOD(
VALUE(MID(CNPJFormatado__c,1,1))*11+
VALUE(MID(CNPJFormatado__c,2,1))*10+
VALUE(MID(CNPJFormatado__c,3,1))*9+
VALUE(MID(CNPJFormatado__c,4,1))*8+
VALUE(MID(CNPJFormatado__c,5,1))*7+
VALUE(MID(CNPJFormatado__c,6,1))*6+
VALUE(MID(CNPJFormatado__c,7,1))*5+
VALUE(MID(CNPJFormatado__c,8,1))*4+
VALUE(MID(CNPJFormatado__c,9,1))*3+
VALUE(MID(CNPJFormatado__c,10,1))*2,11),11),10)=
VALUE(MID(CNPJFormatado__c,11,1))))))</errorConditionFormula>
    <errorDisplayField>CNPJ_CPF__c</errorDisplayField>
    <errorMessage>CNPJ inválido.</errorMessage>
</ValidationRule>