force-app/main/default/objects/Account/validationRules/Valida_Formato_Celular.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Formato_Celular</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK( Celular__c  ),  
REGEX( Celular__c ,&quot;\\([0-9]{2}\\)( )[0-9]{4,5}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Celular__c</errorDisplayField>
    <errorMessage>Formato incorreto</errorMessage>
</ValidationRule>