force-app/main/default/objects/Account/validationRules/Valida_Formato_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Formato_CNPJ</fullName>
    <active>false</active>
    <errorConditionFormula>IF(REGEX( CNPJ_CPF__c ,&quot;[0-9]{2}.[0-9]{3}.[0-9]{3}/[0-9]{4}-[0-9]{2}&quot;), false, true)

&amp;&amp;

NOT(ISBLANK(CNPJ_CPF__c ))</errorConditionFormula>
    <errorDisplayField>CNPJ_CPF__c</errorDisplayField>
    <errorMessage>Preencher o formato correto do CNPJ: XX.XXX.XXX/XXXX-XX</errorMessage>
</ValidationRule>