force-app/main/default/objects/Account/listViews/Contas_Feiras.listView-meta.xml
<ListView>
    <fullName>Contas_Feiras</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Paloma,Carolina,Marcela</value>
    </filters>
    <label>Contas Feiras</label>
    <sharedTo>
        <role>Feiras</role>
    </sharedTo>
</ListView>