force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>nomeFantasia__c</columns>
    <columns>CNPJ_CPF__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Mine</filterScope>
    <label>Minhas Contas</label>
</ListView>