force-app/main/default/objects/Account/listViews/Novas_Contas.listView-meta.xml
<ListView>
    <fullName>Novas_Contas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>nomeFantasia__c</columns>
    <columns>CNPJ_CPF__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Novas Contas</label>
</ListView>