force-app/main/default/objects/Account/listViews/Todas_as_contas.listView-meta.xml
<ListView>
    <fullName>Todas_as_contas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>nomeFantasia__c</columns>
    <columns>CNPJ_CPF__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as contas</label>
</ListView>